--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </div>
   <!-- It is section6 -->
   <div class="Part5MainCont">
-    <video src="./SOURCE/video1.mp4" autoplay loop muted id="video1">video1</video>
+    <video src="./SOURCE/PICS/video1.mp4" autoplay loop muted id="video1">video1</video>
   </div>
   <!-- It is section7 -->
   <div class="Part6MainCont">
